:ok_hand:style rename profession

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "name": "Amanda Polari",
-    "job": "Sofware Enginner",
+    "job": "Front-End Sofware Enginner",
     "github": "amandapolari",
     "playlists": {
         "jogos": [
